soc1/soc1/soc/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soc
  labels:
    project: soc
