soc1/soc1/soc/k8s/base/falco-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: falco
spec:
  selector:
    matchLabels:
      app: falco
  template:
    metadata:
      labels:
        app: falco
    spec:
      tolerations:
        - operator: Exists
      containers:
        - name: falco
          image: falcosecurity/falco:0.38.2
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: 256Mi
            limits:
              cpu: "500m"
              memory: 512Mi
